add footer, fix bugs, change accordions

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                         <li><a href="#main">Головна</a></li>
                         <li><a href="#about">Про нас</a></li>
                         <li><a href="#services">Послуги</a></li>
+                        <li><a href="#gallery">Галерея</a></li>
                         <li><a href="#contacts">Контакти</a></li>
                         <li><a href="#documentasion">Документація</a></li>
                     </ul>
@@ -51,9 +52,24 @@
                 <h2 class="about-title">Про нас</h2>
                 <p class="about-description">
                     Комунальне підприємство Білоцерківської міської ради «Муніципальна варта» створено у грудні 2017
-                    року на підставі рішення Білоцерківської міської ради № 1779-42-VII з метою профілактики
-                    правопорушень, охорони фізичних та юридичних осіб, забезпечення охорони громадського порядку на
-                    території міста Біла Церква, надання допомоги мешканцям міста в межах своєї компетенції.
+                    року
+                    на підставі рішення Білоцерківської міської ради № 1779-42-VII з метою профілактики правопорушень,
+                    охорони фізичних та юридичних осіб, забезпечення охорони громадського порядку на території міста
+                    Біла
+                    Церква, надання допомоги мешканцям міста в межах своєї компетенції.
+                </p>
+                <p class="about-expanded">
+                    Наша основна мета — створення безпечного середовища для кожного мешканця та гостя міста. Ми працюємо
+                    над
+                    формуванням довіри до органів місцевої влади, сприяємо зменшенню рівня злочинності та забезпечуємо
+                    оперативну допомогу
+                    в складних ситуаціях.
+                </p>
+                <p class="about-expanded">
+                    Працівники «Муніципальної варти» — це професіонали, які пройшли спеціальну підготовку, включаючи
+                    ветеранів АТО,
+                    які готові захищати громаду. Ми активно співпрацюємо з іншими організаціями для покращення безпеки в
+                    місті.
                 </p>
 
                 <!-- Лічильники -->
@@ -79,136 +95,169 @@
                 <!-- Акордеон з лаконічними питаннями та відповідями -->
                 <div class="accordion">
                     <div class="accordion-item">
-                        <button class="accordion-header">Що таке Муніципальна Варта?</button>
+                        <button class="accordion-header">Хто ми?</button>
                         <div class="accordion-content">
-                            <p>Комунальне підприємство для забезпечення порядку і безпеки на території Білої Церкви.</p>
+                            <p>Муніципальна Варта — це комунальне підприємство, створене для підтримання порядку,
+                                безпеки та комфорту мешканців і гостей Білої Церкви.</p>
                         </div>
                     </div>
                     <div class="accordion-item">
-                        <button class="accordion-header">Основні напрямки роботи?</button>
+                        <button class="accordion-header">Наші основні завдання</button>
                         <div class="accordion-content">
                             <ul>
-                                <li>Охорона громадського порядку</li>
-                                <li>Захист правопорядку разом з поліцією</li>
-                                <li>Надання допомоги громадянам</li>
+                                <li>Охорона громадського порядку та безпеки під час масових заходів.</li>
+                                <li>Патрулювання міських територій та профілактика правопорушень.</li>
+                                <li>Встановлення відеоспостереження та інших охоронних систем.</li>
                             </ul>
                         </div>
                     </div>
                     <div class="accordion-item">
-                        <button class="accordion-header">Які послуги надає Муніципальна Варта?</button>
+                        <button class="accordion-header">Послуги, які ми надаємо</button>
                         <div class="accordion-content">
-                            <p>Охорона об'єктів, патрулювання, встановлення відеоспостереження та сигналізацій.</p>
+                            <p>Забезпечуємо охорону об’єктів, встановлюємо та обслуговуємо системи безпеки, реагуємо на
+                                екстрені виклики, забезпечуємо порядок у місті.</p>
                         </div>
                     </div>
                     <div class="accordion-item">
-                        <button class="accordion-header">Як зв'язатися з вами?</button>
+                        <button class="accordion-header">Як з нами зв'язатися?</button>
                         <div class="accordion-content">
-                            <p>Зателефонуйте за номером +38 096 305 0002 або заповніть форму на сайті.</p>
-                        </div>
-                    </div>
-                    <!-- Додаткові акордеони -->
-                    <div class="accordion-item">
-                        <button class="accordion-header">Чи надаєте ви допомогу при надзвичайних ситуаціях?</button>
-                        <div class="accordion-content">
-                            <p>Так, ми надаємо допомогу в разі надзвичайних ситуацій та підтримуємо місцеву поліцію.</p>
+                            <p>Телефонуйте за номером <b>+38 096 305 0002</b> або пишіть на email
+                                <b>bc_varta@ukr.net</b>. Ми також приймаємо звернення через форму на нашому сайті.</p>
                         </div>
                     </div>
                     <div class="accordion-item">
-                        <button class="accordion-header">Як ви забезпечуєте безпеку в місті?</button>
+                        <button class="accordion-header">Як ми реагуємо на надзвичайні ситуації?</button>
                         <div class="accordion-content">
-                            <p>Патрулюємо міські території, здійснюємо контроль за об'єктами і проводимо моніторинг
-                                через відеоспостереження.</p>
-
+                            <p>Ми готові діяти 24/7, забезпечуючи оперативну допомогу у випадках мародерства, порушень
+                                порядку чи надзвичайних ситуацій.</p>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <button class="accordion-header">Як забезпечується безпека в місті?</button>
+                        <div class="accordion-content">
+                            <p>Ми проводимо регулярні патрулювання, контролюємо об’єкти міської інфраструктури та
+                                використовуємо сучасні системи відеоспостереження.</p>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <button class="accordion-header">Коли звертатися до нас?</button>
+                        <div class="accordion-content">
+                            <p>Ми працюємо цілодобово. Звертайтеся у випадках: підозрілої активності, мародерства,
+                                конфліктів, порушень благоустрою чи інших ситуацій, які потребують нашого втручання.</p>
                         </div>
                     </div>
                 </div>
-        </section>
 
-        <section id="services" class="services">
-            <div class="container">
-                <h2>Наші Послуги</h2>
-                <div class="services-container">
-                    <!-- Картка 1 -->
-                    <div class="service-card">
-                        <i class="fas fa-shield-alt"></i>
-                        <h3>Охорона громадського порядку</h3>
-                        <p>Забезпечення безпеки на території міста, охорона публічного порядку.</p>
-                        <button class="service__btn">Замовити</button>
-                    </div>
-                    <!-- Картка 2 -->
-                    <div class="service-card">
-                        <i class="fas fa-building"></i>
-                        <h3>Охорона об'єктів та майна</h3>
-                        <p>Контроль за станом безпеки об'єктів, майновою безпекою та охорона важливих об'єктів.
-                        </p>
-                        <button class="service__btn">Замовити</button>
-                    </div>
-                    <!-- Картка 3 -->
-                    <div class="service-card">
-                        <i class="fas fa-users"></i>
-                        <h3>Охорона фізичних та юридичних осіб</h3>
-                        <p>Захист фізичних та юридичних осіб (суб'єктів) в межах міста та за його межами.</p>
-                        <button class="service__btn">Замовити</button>
-                    </div>
-                    <!-- Картка 4 -->
-                    <div class="service-card">
-                        <i class="fas fa-video"></i>
-                        <h3>Встановлення та обслуговування відеоспостереження</h3>
-                        <p>Проектування та обслуговування систем відеоспостереження для підвищення безпеки.</p>
-                        <button class="service__btn">Замовити</button>
-                    </div>
-                    <!-- Картка 5 -->
-                    <div class="service-card">
-                        <i class="fas fa-bell"></i>
-                        <h3>Охоронна та тривожна сигналізація</h3>
-                        <p>Монтаж та технічне обслуговування охоронних та тривожних сигналізацій для об'єктів.
-                        </p>
-                        <button class="service__btn">Замовити</button>
-                    </div>
-                    <!-- Картка 6 -->
-                    <div class="service-card">
-                        <i class="fas fa-car"></i>
-                        <h3>Централізоване спостереження та реагування</h3>
-                        <p>Забезпечення централізованого спостереження та реагування за допомогою транспорту
-                            реагування.</p>
-                        <button class="service__btn">Замовити</button>
-                    </div>
+        </section>
+    </div>
+    <section id="services" class="services">
+        <div class="container">
+            <h2>Наші Послуги</h2>
+            <div class="services-container">
+                <!-- Картка 1 -->
+                <div class="service-card">
+                    <i class="fas fa-shield-alt"></i>
+                    <h3>Охорона громадського порядку</h3>
+                    <p>Забезпечення безпеки на території міста, охорона публічного порядку.</p>
+                    <button class="service__btn">Замовити</button>
                 </div>
-            </div>
-        </section>
-
-        <!-- Модальне вікно -->
-        <div id="modal" class="modal hidden">
-            <div class="modal-content">
-
-                <h2>Замовлення послуги</h2>
-                <form id="orderForm">
-                    <span class=" close-btn">&times;</span>
-                    <input type="text" id="name" name="name" placeholder="Введіть ваше ім'я" required>
-                    <input type="tel" id="phone" name="phone" placeholder="+38 (___) ___-__-__" required>
-                    <button type="submit" class="submit-btn">Відправити</button>
-                </form>
+                <!-- Картка 2 -->
+                <div class="service-card">
+                    <i class="fas fa-building"></i>
+                    <h3>Охорона об'єктів та майна</h3>
+                    <p>Контроль за станом безпеки об'єктів, майновою безпекою та охорона важливих об'єктів.
+                    </p>
+                    <button class="service__btn">Замовити</button>
+                </div>
+                <!-- Картка 3 -->
+                <div class="service-card">
+                    <i class="fas fa-users"></i>
+                    <h3>Охорона фізичних та юридичних осіб</h3>
+                    <p>Захист фізичних та юридичних осіб (суб'єктів) в межах міста та за його межами.</p>
+                    <button class="service__btn">Замовити</button>
+                </div>
+                <!-- Картка 4 -->
+                <div class="service-card">
+                    <i class="fas fa-video"></i>
+                    <h3>Встановлення та обслуговування відеоспостереження</h3>
+                    <p>Проектування та обслуговування систем відеоспостереження для підвищення безпеки.</p>
+                    <button class="service__btn">Замовити</button>
+                </div>
+                <!-- Картка 5 -->
+                <div class="service-card">
+                    <i class="fas fa-bell"></i>
+                    <h3>Охоронна та тривожна сигналізація</h3>
+                    <p>Монтаж та технічне обслуговування охоронних та тривожних сигналізацій для об'єктів.
+                    </p>
+                    <button class="service__btn">Замовити</button>
+                </div>
+                <!-- Картка 6 -->
+                <div class="service-card">
+                    <i class="fas fa-car"></i>
+                    <h3>Централізоване спостереження та реагування</h3>
+                    <p>Забезпечення централізованого спостереження та реагування за допомогою транспорту
+                        реагування.</p>
+                    <button class="service__btn">Замовити</button>
+                </div>
             </div>
         </div>
+    </section>
 
-
-
-
-        <!-- Контакти -->
-        <section id="contacts" class="contacts">
-            <div class="container">
-                <h2>Контакти</h2>
-                <div class="contacts-info">
-                    <p><i class="fas fa-map-marker-alt"></i> вул. А. Шептицького, 2, Біла Церква</p>
-                    <p><i class="fas fa-phone"></i> 096 305 0002</p>
-                </div>
+    <section id="gallery" class="gallery">
+        <h2>Галерея</h2>
+        <div class="container">
+            <div class="gallery-container">
+                <div class="carousel-item"><img src="images/gallery1.jpg" alt="Фото 1"></div>
+                <div class="carousel-item"><img src="images/gallery2.jpg" alt="Фото 2"></div>
+                <div class="carousel-item"><img src="images/gallery3.jpg" alt="Фото 3"></div>
+                <div class="carousel-item"><img src="images/gallery4.jpg" alt="Фото 4"></div>
+                <div class="carousel-item"><img src="images/gallery5.jpg" alt="Фото 5"></div>
+                <div class="carousel-item"><img src="images/gallery7.jpg" alt="Фото 6"></div>
+                <div class="carousel-item"><img src="images/gallery8.jpg" alt="Фото 7"></div>
+                <div class="carousel-item"><img src="images/gallery6.jpg" alt="Фото 8"></div>
             </div>
-        </section>
 
-        <footer class="footer">
-            <p>&copy; 2024 Муніципальна Варта Білої Церкви. Усі права захищені.</p>
-        </footer>
+        </div>
+    </section>
+
+
+    <!-- Модальне вікно -->
+    <div id="modal" class="modal hidden">
+        <div class="modal-content">
+
+            <h2>Замовлення послуги</h2>
+            <form id="orderForm">
+                <span class=" close-btn">&times;</span>
+                <input type="text" id="name" name="name" placeholder="Введіть ваше ім'я" required>
+                <input type="tel" id="phone" name="phone" placeholder="+38 (___) ___-__-__" required>
+                <button type="submit" class="submit-btn">Відправити</button>
+            </form>
+        </div>
     </div>
+
+
+
+
+    <!-- Контакти -->
+    <section id="contacts" class="contacts">
+        <div class="container">
+            <div class="contacts-info">
+                <p><i class="fas fa-map-marker-alt"></i> м.Біла Церква, вул. Андрія Шептицького, 2</p>
+                <p><i class="fas fa-envelope"></i> <a href="mailto:bc_varta@ukr.net">bc_varta@ukr.net</a></p>
+                <p><i class="fas fa-phone"></i> +380 960 000 002</p>
+            </div>
+            <div class="contacts-social">
+                <a href="https://www.facebook.com/MunitsypalnaVartaBC" target="_blank"><i
+                        class="fab fa-facebook"></i></a>
+                <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
+            </div>
+            <div class="footer-copy">
+                © 2024 КП БМР Муніципальна Варта
+            </div>
+        </div>
+    </section>
+
+
 
     <script src="scripts/main.js"></script>
 </body>
