refactoring main.js

--- a/index.html
+++ b/index.html
@@ -10,9 +10,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/inputmask/5.0.8/inputmask.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
-
-
-
 </head>
 
 <body>
@@ -122,7 +119,8 @@
                         <button class="accordion-header">Як з нами зв'язатися?</button>
                         <div class="accordion-content">
                             <p>Телефонуйте за номером <b>+38 096 305 0002</b> або пишіть на email
-                                <b>bc_varta@ukr.net</b>. Ми також приймаємо звернення через форму на нашому сайті.</p>
+                                <b>bc_varta@ukr.net</b>. Ми також приймаємо звернення через форму на нашому сайті.
+                            </p>
                         </div>
                     </div>
                     <div class="accordion-item">
