--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/inputmask/5.0.8/inputmask.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/uk_UA/sdk.js#xfbml=1&version=v16.0">
+    </script>
 </head>
 
 <body>
@@ -24,7 +26,6 @@
                         <li><a href="#services">Послуги</a></li>
                         <li><a href="#gallery">Галерея</a></li>
                         <li><a href="#contacts">Контакти</a></li>
-                        <li><a href="#documentasion">Документація</a></li>
                     </ul>
                 </nav>
                 <div class="header-right">
@@ -47,28 +48,43 @@
         <section id="about" class="about full-screen">
             <div class="container">
                 <h2 class="about-title">Про нас</h2>
-                <p class="about-description">
-                    Комунальне підприємство Білоцерківської міської ради «Муніципальна варта» створено у грудні 2017
-                    року
-                    на підставі рішення Білоцерківської міської ради № 1779-42-VII з метою профілактики правопорушень,
-                    охорони фізичних та юридичних осіб, забезпечення охорони громадського порядку на території міста
-                    Біла
-                    Церква, надання допомоги мешканцям міста в межах своєї компетенції.
-                </p>
-                <p class="about-expanded">
-                    Наша основна мета — створення безпечного середовища для кожного мешканця та гостя міста. Ми працюємо
-                    над
-                    формуванням довіри до органів місцевої влади, сприяємо зменшенню рівня злочинності та забезпечуємо
-                    оперативну допомогу
-                    в складних ситуаціях.
-                </p>
-                <p class="about-expanded">
-                    Працівники «Муніципальної варти» — це професіонали, які пройшли спеціальну підготовку, включаючи
-                    ветеранів АТО,
-                    які готові захищати громаду. Ми активно співпрацюємо з іншими організаціями для покращення безпеки в
-                    місті.
-                </p>
+                <div class="about__container">
+                    <p class="about-description">
+                        Комунальне підприємство Білоцерківської міської ради «Муніципальна варта» створено у грудні 2017
+                        року
+                        на підставі рішення Білоцерківської міської ради № 1779-42-VII з метою профілактики
+                        правопорушень,
+                        охорони фізичних та юридичних осіб, забезпечення охорони громадського порядку на території міста
+                        Біла
+                        Церква, надання допомоги мешканцям міста в межах своєї компетенції.
+                    </p>
+                    <p class="about-expanded">
+                        Наша основна мета — створення безпечного середовища для кожного мешканця та гостя міста. Ми
+                        працюємо
+                        над
+                        формуванням довіри до органів місцевої влади, сприяємо зменшенню рівня злочинності та
+                        забезпечуємо
+                        оперативну допомогу
+                        в складних ситуаціях.
+                    </p>
+                    <p class="about-expanded">
+                        Працівники «Муніципальної варти» — це професіонали, які пройшли спеціальну підготовку, включаючи
+                        ветеранів АТО,
+                        які готові захищати громаду. Ми активно співпрацюємо з іншими організаціями для покращення
+                        безпеки в
+                        місті.
+                    </p>
 
+                    <div class="video-container">
+                        <iframe
+                            src="https://www.facebook.com/plugins/video.php?height=314&href=https%3A%2F%2Fwww.facebook.com%2FMunitsypalnaVartaBC%2Fvideos%2F896961771480743%2F&show_text=false&width=560&t=0"
+                            width="560" height="314" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
+                            allowfullscreen="true"
+                            allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
+                            allowFullScreen="true"></iframe>
+                    </div>
+
+                </div>
                 <!-- Лічильники -->
                 <div class="counters">
                     <div class="counter">
@@ -124,27 +140,37 @@
                         </div>
                     </div>
                     <div class="accordion-item">
-                        <button class="accordion-header">Як ми реагуємо на надзвичайні ситуації?</button>
+                        <button class="accordion-header">Як ми забезпечуємо оперативність?</button>
                         <div class="accordion-content">
-                            <p>Ми готові діяти 24/7, забезпечуючи оперативну допомогу у випадках мародерства, порушень
-                                порядку чи надзвичайних ситуацій.</p>
+                            <p>Середній час прибуття патруля становить близько 5 хвилин завдяки використанню сервісу,
+                                який
+                                враховує міський трафік. Зони реагування та кількість екіпажів
+                                ретельно сплановані для швидкого та ефективного реагування на виклики.</p>
+                        </div>
+                        <div class="accordion-item">
+                            <button class="accordion-header">Як ми реагуємо на надзвичайні ситуації?</button>
+                            <div class="accordion-content">
+                                <p>Ми готові діяти 24/7, забезпечуючи оперативну допомогу у випадках мародерства,
+                                    порушень
+                                    порядку чи надзвичайних ситуацій.</p>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <button class="accordion-header">Як забезпечується безпека в місті?</button>
+                            <div class="accordion-content">
+                                <p>Ми проводимо регулярні патрулювання, контролюємо об’єкти міської інфраструктури та
+                                    використовуємо сучасні системи відеоспостереження.</p>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <button class="accordion-header">Коли звертатися до нас?</button>
+                            <div class="accordion-content">
+                                <p>Ми працюємо цілодобово. Звертайтеся у випадках: підозрілої активності, мародерства,
+                                    конфліктів, порушень благоустрою чи інших ситуацій, які потребують нашого втручання.
+                                </p>
+                            </div>
                         </div>
                     </div>
-                    <div class="accordion-item">
-                        <button class="accordion-header">Як забезпечується безпека в місті?</button>
-                        <div class="accordion-content">
-                            <p>Ми проводимо регулярні патрулювання, контролюємо об’єкти міської інфраструктури та
-                                використовуємо сучасні системи відеоспостереження.</p>
-                        </div>
-                    </div>
-                    <div class="accordion-item">
-                        <button class="accordion-header">Коли звертатися до нас?</button>
-                        <div class="accordion-content">
-                            <p>Ми працюємо цілодобово. Звертайтеся у випадках: підозрілої активності, мародерства,
-                                конфліктів, порушень благоустрою чи інших ситуацій, які потребують нашого втручання.</p>
-                        </div>
-                    </div>
-                </div>
 
         </section>
     </div>
@@ -239,11 +265,25 @@
     <!-- Контакти -->
     <section id="contacts" class="contacts">
         <div class="container">
-            <div class="contacts-info">
-                <p><i class="fas fa-map-marker-alt"></i> м.Біла Церква, вул. Андрія Шептицького, 2</p>
-                <p><i class="fas fa-envelope"></i> <a href="mailto:bc_varta@ukr.net">bc_varta@ukr.net</a></p>
-                <p><i class="fas fa-phone"></i> +380 960 000 002</p>
+            <div class="contacts-content">
+                <!-- Ліва частина: контактна інформація -->
+                <div class="contacts-info">
+                    <p><i class="fas fa-map-marker-alt"></i> м.Біла Церква, вул. Андрія Шептицького, 2</p>
+                    <p><i class="fas fa-envelope"></i> <a href="mailto:bc_varta@ukr.net">bc_varta@ukr.net</a></p>
+                    <p><i class="fas fa-phone"></i> +380 960 000 002</p>
+                </div>
+
+                <!-- Права частина: документи -->
+                <div class="contacts-documents">
+                    <ul>
+                        <li><i class="fas fa-file-alt"></i> <a href="documentaion/Статут.docx"
+                                target="_blank">Статут</a>
+                        </li>
+
+                    </ul>
+                </div>
             </div>
+
             <div class="contacts-social">
                 <a href="https://www.facebook.com/MunitsypalnaVartaBC" target="_blank"><i
                         class="fab fa-facebook"></i></a>
@@ -254,6 +294,7 @@
             </div>
         </div>
     </section>
+
 
 
 
