--- a/index.html
+++ b/index.html
@@ -12,12 +12,15 @@
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <script async defer crossorigin="anonymous" src="https://connect.facebook.net/uk_UA/sdk.js#xfbml=1&version=v16.0">
     </script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+
 </head>
 
 <body>
     <div class="main-container">
         <header class="header">
-            <div class="header__container">
+            <div class="header__container" data-aos="fade-up">
                 <img class="logo__img" src="images/logo.jpg" alt="Логотип">
                 <nav>
                     <ul class="nav-menu">
@@ -38,7 +41,7 @@
 
         <!-- Головний блок -->
         <section id="main" class="hero">
-            <div class="hero-content">
+            <div class="hero-content" data-aos="fade-up">
                 <h1 class="title__hero">Муніципальна Варта Білої Церкви</h1>
                 <p>Ваш порядок, безпека та надійність у місті!</p>
                 <a href="#about" class="btn__info">Дізнатися більше</a>
@@ -46,47 +49,41 @@
         </section>
 
         <section id="about" class="about full-screen">
-            <div class="container">
+            <div class="container" data-aos="fade-up">
                 <h2 class="about-title">Про нас</h2>
-                <div class="about__container">
+                <div class="about-content">
+                    <iframe
+                        src="https://www.facebook.com/plugins/video.php?height=314&href=https%3A%2F%2Fwww.facebook.com%2FMunitsypalnaVartaBC%2Fvideos%2F896961771480743%2F&show_text=false&width=560&t=0"
+                        class="about-video" allowfullscreen="true"
+                        allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
                     <p class="about-description">
                         Комунальне підприємство Білоцерківської міської ради «Муніципальна варта» створено у грудні 2017
-                        року
-                        на підставі рішення Білоцерківської міської ради № 1779-42-VII з метою профілактики
-                        правопорушень,
-                        охорони фізичних та юридичних осіб, забезпечення охорони громадського порядку на території міста
-                        Біла
-                        Церква, надання допомоги мешканцям міста в межах своєї компетенції.
+                        року на
+                        підставі рішення Білоцерківської міської ради № 1779-42-VII з метою профілактики правопорушень,
+                        охорони фізичних
+                        та юридичних осіб, забезпечення охорони громадського порядку на території міста Біла Церква,
+                        надання допомоги
+                        мешканцям міста в межах своєї компетенції.
                     </p>
-                    <p class="about-expanded">
+
+                    <p class="about-description">
                         Наша основна мета — створення безпечного середовища для кожного мешканця та гостя міста. Ми
-                        працюємо
-                        над
+                        працюємо над
                         формуванням довіри до органів місцевої влади, сприяємо зменшенню рівня злочинності та
-                        забезпечуємо
-                        оперативну допомогу
-                        в складних ситуаціях.
+                        забезпечуємо оперативну
+                        допомогу в складних ситуаціях.
                     </p>
-                    <p class="about-expanded">
+                    <p class="about-description">
                         Працівники «Муніципальної варти» — це професіонали, які пройшли спеціальну підготовку, включаючи
                         ветеранів АТО,
                         які готові захищати громаду. Ми активно співпрацюємо з іншими організаціями для покращення
-                        безпеки в
-                        місті.
+                        безпеки в місті.
                     </p>
-
-                    <div class="video-container">
-                        <iframe
-                            src="https://www.facebook.com/plugins/video.php?height=314&href=https%3A%2F%2Fwww.facebook.com%2FMunitsypalnaVartaBC%2Fvideos%2F896961771480743%2F&show_text=false&width=560&t=0"
-                            width="560" height="314" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
-                            allowfullscreen="true"
-                            allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
-                            allowFullScreen="true"></iframe>
-                    </div>
-
                 </div>
+
+
                 <!-- Лічильники -->
-                <div class="counters">
+                <div class="counters" data-aos="fade-up">
                     <div class="counter">
                         <span class="number" data-target="24">0</span>
                         <p>Цілодобова охорона</p>
@@ -106,7 +103,7 @@
                 </div>
 
                 <!-- Акордеон з лаконічними питаннями та відповідями -->
-                <div class="accordion">
+                <div class="accordion" data-aos="fade-up">
                     <div class="accordion-item">
                         <button class="accordion-header">Хто ми?</button>
                         <div class="accordion-content">
@@ -117,11 +114,11 @@
                     <div class="accordion-item">
                         <button class="accordion-header">Наші основні завдання</button>
                         <div class="accordion-content">
-                            <ul>
+                            <ol>
                                 <li>Охорона громадського порядку та безпеки під час масових заходів.</li>
                                 <li>Патрулювання міських територій та профілактика правопорушень.</li>
                                 <li>Встановлення відеоспостереження та інших охоронних систем.</li>
-                            </ul>
+                            </ol>
                         </div>
                     </div>
                     <div class="accordion-item">
@@ -143,41 +140,40 @@
                         <button class="accordion-header">Як ми забезпечуємо оперативність?</button>
                         <div class="accordion-content">
                             <p>Середній час прибуття патруля становить близько 5 хвилин завдяки використанню сервісу,
-                                який
-                                враховує міський трафік. Зони реагування та кількість екіпажів
-                                ретельно сплановані для швидкого та ефективного реагування на виклики.</p>
-                        </div>
-                        <div class="accordion-item">
-                            <button class="accordion-header">Як ми реагуємо на надзвичайні ситуації?</button>
-                            <div class="accordion-content">
-                                <p>Ми готові діяти 24/7, забезпечуючи оперативну допомогу у випадках мародерства,
-                                    порушень
-                                    порядку чи надзвичайних ситуацій.</p>
-                            </div>
-                        </div>
-                        <div class="accordion-item">
-                            <button class="accordion-header">Як забезпечується безпека в місті?</button>
-                            <div class="accordion-content">
-                                <p>Ми проводимо регулярні патрулювання, контролюємо об’єкти міської інфраструктури та
-                                    використовуємо сучасні системи відеоспостереження.</p>
-                            </div>
-                        </div>
-                        <div class="accordion-item">
-                            <button class="accordion-header">Коли звертатися до нас?</button>
-                            <div class="accordion-content">
-                                <p>Ми працюємо цілодобово. Звертайтеся у випадках: підозрілої активності, мародерства,
-                                    конфліктів, порушень благоустрою чи інших ситуацій, які потребують нашого втручання.
-                                </p>
-                            </div>
+                                який враховує міський трафік. Зони реагування та кількість екіпажів ретельно сплановані
+                                для швидкого та ефективного реагування на виклики.</p>
                         </div>
                     </div>
-
+                    <div class="accordion-item">
+                        <button class="accordion-header">Як ми реагуємо на надзвичайні ситуації?</button>
+                        <div class="accordion-content">
+                            <p>Ми готові діяти 24/7, забезпечуючи оперативну допомогу у випадках мародерства, порушень
+                                порядку чи надзвичайних ситуацій.</p>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <button class="accordion-header">Як забезпечується безпека в місті?</button>
+                        <div class="accordion-content">
+                            <p>Ми проводимо регулярні патрулювання, контролюємо об’єкти міської інфраструктури та
+                                використовуємо сучасні системи відеоспостереження.</p>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <button class="accordion-header">Коли звертатися до нас?</button>
+                        <div class="accordion-content">
+                            <p>Ми працюємо цілодобово. Звертайтеся у випадках: підозрілої активності, мародерства,
+                                конфліктів, порушень благоустрою чи інших ситуацій, які потребують нашого втручання.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
+
     </div>
     <section id="services" class="services">
-        <div class="container">
+        <div class="container" data-aos="fade-up">
             <h2>Наші Послуги</h2>
-            <div class="services-container">
+            <div class="services-container" data-aos="fade-up">
                 <!-- Картка 1 -->
                 <div class="service-card">
                     <i class="fas fa-shield-alt"></i>
@@ -195,9 +191,12 @@
                 </div>
                 <!-- Картка 3 -->
                 <div class="service-card">
-                    <i class="fas fa-users"></i>
-                    <h3>Охорона фізичних та юридичних осіб</h3>
-                    <p>Захист фізичних та юридичних осіб (суб'єктів) в межах міста та за його межами.</p>
+                    <i class="fas fa-fire-extinguisher"></i>
+
+                    <h3>Пожежна охорона</h3>
+                    <p>Контроль протипожежної безпеки на об'єктах міської інфраструктури, встановення
+                        системи
+                        пожежної сигналізації.</p>
                     <button class="service__btn">Замовити</button>
                 </div>
                 <!-- Картка 4 -->
@@ -228,9 +227,10 @@
     </section>
 
     <section id="gallery" class="gallery">
+
         <h2>Галерея</h2>
-        <div class="container">
-            <div class="gallery-container">
+        <div class="container" data-aos="fade-up">
+            <div class="gallery-container" data-aos="fade-up">
                 <div class="carousel-item"><img src="images/gallery1.jpg" alt="Фото 1"></div>
                 <div class="carousel-item"><img src="images/gallery2.jpg" alt="Фото 2"></div>
                 <div class="carousel-item"><img src="images/gallery3.jpg" alt="Фото 3"></div>
@@ -250,7 +250,7 @@
         <div class="modal-content">
 
             <h2>Замовлення послуги</h2>
-            <form id="orderForm">
+            <form id="orderForm" autocomplete="off">
                 <span class=" close-btn">&times;</span>
                 <input type="text" id="name" name="name" placeholder="Введіть ваше ім'я" required>
                 <input type="tel" id="phone" name="phone" placeholder="+38 (___) ___-__-__" required>
@@ -287,12 +287,10 @@
             <div class="contacts-social">
                 <a href="https://www.facebook.com/MunitsypalnaVartaBC" target="_blank"><i
                         class="fab fa-facebook"></i></a>
-                <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
+                <div class="footer-copy">
+                    © 2024 КП БМР Муніципальна Варта
+                </div>
             </div>
-            <div class="footer-copy">
-                © 2024 КП БМР Муніципальна Варта
-            </div>
-        </div>
     </section>
 
 
