--- a/index.html
+++ b/index.html
@@ -231,14 +231,15 @@
         <h2>Галерея</h2>
         <div class="container" data-aos="fade-up">
             <div class="gallery-container" data-aos="fade-up">
-                <div class="carousel-item"><img src="images/gallery1.jpg" alt="Фото 1"></div>
-                <div class="carousel-item"><img src="images/gallery2.jpg" alt="Фото 2"></div>
-                <div class="carousel-item"><img src="images/gallery3.jpg" alt="Фото 3"></div>
-                <div class="carousel-item"><img src="images/gallery4.jpg" alt="Фото 4"></div>
-                <div class="carousel-item"><img src="images/gallery5.jpg" alt="Фото 5"></div>
-                <div class="carousel-item"><img src="images/gallery7.jpg" alt="Фото 6"></div>
-                <div class="carousel-item"><img src="images/gallery8.jpg" alt="Фото 7"></div>
-                <div class="carousel-item"><img src="images/gallery6.jpg" alt="Фото 8"></div>
+                <div class="gallery-item"><img src="images/gallery1.jpg" alt="Фото 1"></div>
+                <div class="gallery-item"><img src="images/gallery2.jpg" alt="Фото 2"></div>
+                <div class="gallery-item"><img src="images/gallery3.jpg" alt="Фото 3"></div>
+                <div class="gallery-item"><img src="images/gallery4.jpg" alt="Фото 4"></div>
+                <div class="gallery-item"><img src="images/gallery5.jpg" alt="Фото 5"></div>
+                <div class="gallery-item"><img src="images/gallery7.jpg" alt="Фото 6"></div>
+                <div class="gallery-item"><img src="images/gallery8.jpg" alt="Фото 7"></div>
+                <div class="gallery-item"><img src="images/gallery6.jpg" alt="Фото 8"></div>
+                <div class="gallery-item"><img src="images/gallery9.jpg" alt="Фото 9"></div>
             </div>
 
         </div>
@@ -272,7 +273,7 @@
             <div class="contacts-content">
                 <!-- Ліва частина: контактна інформація -->
                 <div class="contacts-info">
-                    <p><i class="fas fa-map-marker-alt"></i> м.Біла Церква, вул. Андрія Шептицького, 2</p>
+                    <p><i class="fas fa-map-marker-alt"></i> м. Біла Церква, вул. Андрія Шептицького, 2</p>
                     <p><i class="fas fa-envelope"></i> <a href="mailto:bc_varta@ukr.net">bc_varta@ukr.net</a></p>
                     <p><i class="fas fa-phone"></i> +380 960 000 002</p>
                 </div>
