add media queries

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <header class="header">
             <div class="header__container" data-aos="fade-up">
                 <img class="logo__img" src="images/logo.jpg" alt="Логотип">
-                <nav>
+                <nav class="nav-menu-wrapper">
                     <ul class="nav-menu">
                         <li><a href="#main">Головна</a></li>
                         <li><a href="#about">Про нас</a></li>
@@ -35,6 +35,9 @@
                     <a href="tel:0963050002" class="phone"><i class="fas fa-phone-alt"></i> +38 096 305 0002</a>
                     <button class="theme-toggle" id="themeToggle"><i class="fas fa-adjust"></i></button>
                 </div>
+                <button class="burger-menu" id="burgerMenu">
+                    <i class="fas fa-bars"></i>
+                </button>
             </div>
         </header>
 
