--- a/index.html
+++ b/index.html
@@ -157,8 +157,10 @@
                     <div class="accordion-item">
                         <button class="accordion-header">Як забезпечується безпека в місті?</button>
                         <div class="accordion-content">
-                            <p>Ми проводимо регулярні патрулювання, контролюємо об’єкти міської інфраструктури та
-                                використовуємо сучасні системи відеоспостереження.</p>
+                            <p>Ми забезпечуємо громадську безпеку, проводячи регулярні патрулювання,
+                                контролюємо об’єкти міської інфраструктури та використовуємо сучасні системи
+                                відеоспостереження для своєчасного виявлення та запобігання правопорушенням.</p>
+
                         </div>
                     </div>
                     <div class="accordion-item">
