fix bugs, add fullscreen gallery

--- a/index.html
+++ b/index.html
@@ -285,7 +285,8 @@
                 <!-- Права частина: документи -->
                 <div class="contacts-documents">
                     <ul>
-                        <li><i class="fas fa-file-alt"></i> <a href="documentaion/Статут.docx"
+                        <li><i class="fas fa-file-alt"></i> <a
+                                href="https://new.bc-rada.gov.ua/miska_rada/normatyvni_akty/179_pro_skhvalennia_proektu_rishennia_bilotserkivskoi_miskoi_rady_pro_vnesennia_zmin_do_statutu_komunalnoho_pidpryiemstva_bilotserkivskoi_miskoi_rady__munitsypalna_varta/34585.pdf"
                                 target="_blank">Статут</a>
                         </li>
 
@@ -303,6 +304,10 @@
     </section>
 
 
+    <div id="fullscreenModal" class="modal-gallery hidden">
+        <span class="close-btn">&times;</span>
+        <img class="modal-image" src="" alt="Повний екран">
+    </div>
 
 
     <script src="scripts/main.js"></script>
