--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/inputmask/5.0.8/inputmask.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <script async defer crossorigin="anonymous" src="https://connect.facebook.net/uk_UA/sdk.js#xfbml=1&version=v16.0">
     </script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -257,8 +260,8 @@
             <form id="orderForm" action="https://formsubmit.co/715c7bde9536781cca252090120ddd80" method="POST"
                 autocomplete="off">
                 <span class="close-btn">&times;</span>
-                <input type="text" id="name" name="name" placeholder="Введіть ваше ім'я" required>
-                <input type="tel" id="phone" name="phone" placeholder="+38 (___) ___-__-__" required>
+                <input type="text" id="name" name="name" placeholder="Ваше ім'я" required>
+                <input type="tel" id="phone" placeholder="+38 (___) ___-__-__" maxlength="19">
                 <!-- Захист від спаму -->
                 <input type="hidden" name="_captcha" value="false">
                 <button type="submit" class="submit-btn">Відправити</button>
