fix bug with email sender

--- a/index.html
+++ b/index.html
@@ -236,17 +236,17 @@
 
     <section id="gallery" class="gallery">
         <h2>Галерея</h2>
-        <div class="container" data-aos="fade-up">
+        <div class="container">
             <div class="gallery-container" data-aos="fade-up">
-                <div class="gallery-item"><img src="images/gallery1.jpg" alt="Фото 1"></div>
-                <div class="gallery-item"><img src="images/gallery2.jpg" alt="Фото 2"></div>
-                <div class="gallery-item"><img src="images/gallery3.jpg" alt="Фото 3"></div>
-                <div class="gallery-item"><img src="images/gallery4.jpg" alt="Фото 4"></div>
-                <div class="gallery-item"><img src="images/gallery5.jpg" alt="Фото 5"></div>
-                <div class="gallery-item"><img src="images/gallery7.jpg" alt="Фото 6"></div>
-                <div class="gallery-item"><img src="images/gallery8.jpg" alt="Фото 7"></div>
-                <div class="gallery-item"><img src="images/gallery6.jpg" alt="Фото 8"></div>
-                <div class="gallery-item"><img src="images/gallery9.jpg" alt="Фото 9"></div>
+                <div class="gallery-item" data-aos="fade-up"><img src="images/gallery1.jpg" alt="Фото 1"></div>
+                <div class="gallery-item" data-aos="fade-up"><img src="images/gallery2.jpg" alt="Фото 2"></div>
+                <div class="gallery-item" data-aos="fade-up"><img src="images/gallery3.jpg" alt="Фото 3"></div>
+                <div class="gallery-item" data-aos="fade-up"><img src="images/gallery4.jpg" alt="Фото 4"></div>
+                <div class="gallery-item" data-aos="fade-up"><img src="images/gallery5.jpg" alt="Фото 5"></div>
+                <div class="gallery-item" data-aos="fade-up"><img src="images/gallery7.jpg" alt="Фото 6"></div>
+                <div class="gallery-item" data-aos="fade-up"><img src="images/gallery8.jpg" alt="Фото 7"></div>
+                <div class="gallery-item" data-aos="fade-up"><img src="images/gallery6.jpg" alt="Фото 8"></div>
+                <div class="gallery-item" data-aos="fade-up"><img src="images/gallery9.jpg" alt="Фото 9"></div>
             </div>
 
         </div>
@@ -259,12 +259,11 @@
             <h2>Замовлення послуги</h2>
             <form id="orderForm" action="https://formsubmit.co/715c7bde9536781cca252090120ddd80" method="POST"
                 autocomplete="off">
-                <span class="close-btn">&times;</span>
-                <input type="text" id="name" name="name" placeholder="Ваше ім'я" required>
-                <input type="tel" id="phone" placeholder="+38 (___) ___-__-__" maxlength="19">
-                <!-- Захист від спаму -->
-                <input type="hidden" name="_captcha" value="false">
+                <input type="text" id="name" name="Ім'я" placeholder="Ваше ім'я" required>
+                <input type="tel" id="phone" name="Телефон" placeholder="+38 (___) ___-__-__" required>
                 <button type="submit" class="submit-btn">Відправити</button>
+            </form>
+
             </form>
         </div>
     </div>
